src/objects/CRMC_PP__Grid_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object to store Conga Grid Settings. (public so it&apos;s accessible via javascript.)</description>
    <fields>
        <fullName>CRMC_PP__JSON__c</fullName>
        <description>The JSON Object that contains the setting information.</description>
        <label>JSON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Owner_Label__c</fullName>
        <label>Owner Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Owner_Type__c</fullName>
        <description>Which type of entity the owner is - profile, user, global.</description>
        <label>Owner Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Owner__c</fullName>
        <description>The user or profile that this setting pertains to.  Null for global settings</description>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Setting_Name__c</fullName>
        <description>Lookup name for JSON settings</description>
        <label>Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Setting_Type__c</fullName>
        <description>The Type of the setting.  Used for organizing the grids in the settings page</description>
        <label>Setting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMC_PP__Table_Name__c</fullName>
        <description>The Object that this setting pertains to.</description>
        <label>Table Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Conga Grid Settings</label>
</CustomObject>